- common module